Stop properties menu from wrapping when window width resized too small. Thanks John!

--- a/website_code/styles/properties_tab.css
+++ b/website_code/styles/properties_tab.css
@@ -62,7 +62,8 @@ div#data_area{
 	/*RM responsive changes*/
 	width: 98%;
 	height: 87vh;
-	margin-top:30px
+	margin-top:30px;
+	min-width:521px !important;
 }
 
 div#dynamic_area{
